2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinydebian.el (tinydebian-url-debian-browse-url): Correct `cond'
	by moving `t' case inside it.
	(tinydebian-url-policy-best-practises): Remove 2nd copy.
	(tinydebian-package-status-apt-file): Correct last `cond' case by assing `t'
	clause.
	(tinydebian-font-lock-keywords): Correct daemon.log `font-lock-keywords'.
	(tinydebian-url-list-package-debcheck): Corect call to
	`tinydebian-browse-url-1'.
	(tinydebian-package-status-dpkg-S-main): Correct call to
	`tinydebian-package-status-dpkg-s-main'.
	(tinydebian-url-page-font-lock-keywords): Move upward, before used.

	* tiny/tinylibm.el (ti::fboundp-check-autoload): Update to modern backquote.
	(ti::narrow-safe): Update to modern backquote.
	(ti::narrow-to-paragraph): Update to modern backquote.
	(ti::nconc): Update to modern backquote.
	(ti::when-package): Update to modern backquote.
	(ti::with-require): Update to modern backquote.
	(ti::with-time-this): Update to modern backquote.
	(ti::with-coding-system-raw-text): Update to modern backquote.
	(ti::verb): Update to modern backquote.
	(int-to-float): Update to modern backquote.
	(ti::dotimes): Update to modern backquote.
	(ti::funcall): Update to modern backquote.
	(ti::d!): Update to modern backquote.
	(ti::d!!): Update to modern backquote.
	(ti::applycar): Update to modern backquote.
	(ti::print-p): Update to modern backquote.
	(ti::assoc-append-inside): Update to modern backquote.
	(ti::byte-compile-defun-compiled-p): Update to modern backquote.
	(ti::byte-compile-defun-maybe): Update to modern backquote.
	(ti::package-use-dynamic-compilation): Update to modern backquote.
	(ti::package-require-for-emacs): Update to modern backquote.
	(ti::package-require-view): Update to modern backquote.
	(ti::package-package-require-timer): Update to modern backquote.
	(ti::package-require-mail-abbrevs): Update to modern backquote.
	(ti::use-file-compression): Update to modern backquote.